// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Run some repmin test cases on mutable trees should handle a basic repmin 1`] = `
Array [
  "Pre-Tree",
]
`;

exports[`Run some repmin test cases on mutable trees should handle a basic repmin 2`] = `
Array [
  "Pre-Tree",
  "Post-Tree",
]
`;

exports[`Run some repmin test cases on mutable trees should handle a basic repmin 3`] = `
Array [
  "Pre-Tree",
  "Post-Tree",
  "Post-Attach",
]
`;

exports[`Run some repmin test cases on mutable trees should handle a basic repmin 4`] = `
Array [
  "Pre-Tree",
  "Post-Tree",
  "Post-Attach",
  "path(root) => \\"root\\"",
  "path(root/left) => \\"root/left\\"",
  "path(root/left/left) => \\"root/left/left\\"",
  "min(root/left/left) => 7",
  "path(root/left/right) => \\"root/left/right\\"",
  "path(root/left/right/left) => \\"root/left/right/left\\"",
  "path(root/left/right/left/left) => \\"root/left/right/left/left\\"",
  "min(root/left/right/left/left) => 5",
  "path(root/left/right/left/right) => \\"root/left/right/left/right\\"",
  "min(root/left/right/left/right) => 9",
  "min(root/left/right/left) => 5",
  "path(root/left/right/right) => \\"root/left/right/right\\"",
  "min(root/left/right/right) => 3",
  "min(root/left/right) => 3",
  "min(root/left) => 3",
  "path(root/right) => \\"root/right\\"",
  "path(root/right/left) => \\"root/right/left\\"",
  "min(root/right/left) => 4",
  "path(root/right/right) => \\"root/right/right\\"",
  "path(root/right/right/left) => \\"root/right/right/left\\"",
  "min(root/right/right/left) => 1",
  "path(root/right/right/right) => \\"root/right/right/right\\"",
  "path(root/right/right/right/left) => \\"root/right/right/right/left\\"",
  "min(root/right/right/right/left) => 6",
  "path(root/right/right/right/right) => \\"root/right/right/right/right\\"",
  "min(root/right/right/right/right) => 8",
  "min(root/right/right/right) => 6",
  "min(root/right/right) => 1",
  "min(root/right) => 1",
  "min(root) => 1",
  "global min(root) => 1",
  "Root Globmin",
]
`;

exports[`Run some repmin test cases on mutable trees should handle a basic repmin 5`] = `
Array [
  "Pre-Tree",
  "Post-Tree",
  "Post-Attach",
  "path(root) => \\"root\\"",
  "path(root/left) => \\"root/left\\"",
  "path(root/left/left) => \\"root/left/left\\"",
  "min(root/left/left) => 7",
  "path(root/left/right) => \\"root/left/right\\"",
  "path(root/left/right/left) => \\"root/left/right/left\\"",
  "path(root/left/right/left/left) => \\"root/left/right/left/left\\"",
  "min(root/left/right/left/left) => 5",
  "path(root/left/right/left/right) => \\"root/left/right/left/right\\"",
  "min(root/left/right/left/right) => 9",
  "min(root/left/right/left) => 5",
  "path(root/left/right/right) => \\"root/left/right/right\\"",
  "min(root/left/right/right) => 3",
  "min(root/left/right) => 3",
  "min(root/left) => 3",
  "path(root/right) => \\"root/right\\"",
  "path(root/right/left) => \\"root/right/left\\"",
  "min(root/right/left) => 4",
  "path(root/right/right) => \\"root/right/right\\"",
  "path(root/right/right/left) => \\"root/right/right/left\\"",
  "min(root/right/right/left) => 1",
  "path(root/right/right/right) => \\"root/right/right/right\\"",
  "path(root/right/right/right/left) => \\"root/right/right/right/left\\"",
  "min(root/right/right/right/left) => 6",
  "path(root/right/right/right/right) => \\"root/right/right/right/right\\"",
  "min(root/right/right/right/right) => 8",
  "min(root/right/right/right) => 6",
  "min(root/right/right) => 1",
  "min(root/right) => 1",
  "min(root) => 1",
  "global min(root) => 1",
  "Root Globmin",
  "min(root/left/left) => 7",
  "min(root/left/right/left/left) => 5",
  "min(root/left/right/left/right) => 9",
  "min(root/left/right/left) => 5",
  "min(root/left/right/right) => 3",
  "min(root/left/right) => 3",
  "min(root/left) => 3",
  "global min(root/left) => 1",
  "min(root/left/left) => 7",
  "global min(root/left/left) => 1",
  "repmin(root/left/left) => {\\"type\\":\\"leaf\\",\\"value\\":1}",
  "min(root/left/right/left/left) => 5",
  "min(root/left/right/left/right) => 9",
  "min(root/left/right/left) => 5",
  "min(root/left/right/right) => 3",
  "min(root/left/right) => 3",
  "global min(root/left/right) => 1",
  "min(root/left/right/left/left) => 5",
  "min(root/left/right/left/right) => 9",
  "min(root/left/right/left) => 5",
  "global min(root/left/right/left) => 1",
  "min(root/left/right/left/left) => 5",
  "global min(root/left/right/left/left) => 1",
  "repmin(root/left/right/left/left) => {\\"type\\":\\"leaf\\",\\"value\\":1}",
  "min(root/left/right/left/right) => 9",
  "global min(root/left/right/left/right) => 1",
  "repmin(root/left/right/left/right) => {\\"type\\":\\"leaf\\",\\"value\\":1}",
  "repmin(root/left/right/left) => {\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":1},\\"right\\":{\\"type\\":\\"leaf\\",\\"value\\":1}}",
  "min(root/left/right/right) => 3",
  "global min(root/left/right/right) => 1",
  "repmin(root/left/right/right) => {\\"type\\":\\"leaf\\",\\"value\\":1}",
  "repmin(root/left/right) => {\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":1},\\"right\\":{\\"type\\":\\"leaf\\",\\"value\\":1}},\\"right\\":{\\"type\\":\\"leaf\\",\\"value\\":1}}",
  "repmin(root/left) => {\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":1},\\"right\\":{\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":1},\\"right\\":{\\"type\\":\\"leaf\\",\\"value\\":1}},\\"right\\":{\\"type\\":\\"leaf\\",\\"value\\":1}}}",
  "min(root/right/left) => 4",
  "min(root/right/right/left) => 1",
  "min(root/right/right/right/left) => 6",
  "min(root/right/right/right/right) => 8",
  "min(root/right/right/right) => 6",
  "min(root/right/right) => 1",
  "min(root/right) => 1",
  "global min(root/right) => 1",
  "min(root/right/left) => 4",
  "global min(root/right/left) => 1",
  "repmin(root/right/left) => {\\"type\\":\\"leaf\\",\\"value\\":1}",
  "min(root/right/right/left) => 1",
  "min(root/right/right/right/left) => 6",
  "min(root/right/right/right/right) => 8",
  "min(root/right/right/right) => 6",
  "min(root/right/right) => 1",
  "global min(root/right/right) => 1",
  "min(root/right/right/left) => 1",
  "global min(root/right/right/left) => 1",
  "repmin(root/right/right/left) => {\\"type\\":\\"leaf\\",\\"value\\":1}",
  "min(root/right/right/right/left) => 6",
  "min(root/right/right/right/right) => 8",
  "min(root/right/right/right) => 6",
  "global min(root/right/right/right) => 1",
  "min(root/right/right/right/left) => 6",
  "global min(root/right/right/right/left) => 1",
  "repmin(root/right/right/right/left) => {\\"type\\":\\"leaf\\",\\"value\\":1}",
  "min(root/right/right/right/right) => 8",
  "global min(root/right/right/right/right) => 1",
  "repmin(root/right/right/right/right) => {\\"type\\":\\"leaf\\",\\"value\\":1}",
  "repmin(root/right/right/right) => {\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":1},\\"right\\":{\\"type\\":\\"leaf\\",\\"value\\":1}}",
  "repmin(root/right/right) => {\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":1},\\"right\\":{\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":1},\\"right\\":{\\"type\\":\\"leaf\\",\\"value\\":1}}}",
  "repmin(root/right) => {\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":1},\\"right\\":{\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":1},\\"right\\":{\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":1},\\"right\\":{\\"type\\":\\"leaf\\",\\"value\\":1}}}}",
  "repmin(root) => {\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":1},\\"right\\":{\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":1},\\"right\\":{\\"type\\":\\"leaf\\",\\"value\\":1}},\\"right\\":{\\"type\\":\\"leaf\\",\\"value\\":1}}},\\"right\\":{\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":1},\\"right\\":{\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":1},\\"right\\":{\\"type\\":\\"fork\\",\\"left\\":{\\"type\\":\\"leaf\\",\\"value\\":1},\\"right\\":{\\"type\\":\\"leaf\\",\\"value\\":1}}}}}",
  "Post root repmin",
]
`;
